[project]
name = "doan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "fastapi>=0.122.0",
    "huggingface-hub",
    "numpy>=2.3.5",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.16.1",
    "tokenizers>=0.15",
    "torch>=2.9.1",
    "transformers==4.46.3",
    "uvicorn>=0.38.0",
]
